--- a/node/views/edit.ejs
+++ b/node/views/edit.ejs
@@ -8,9 +8,11 @@
 <body>
     <h1>Edit page</h1> 
 
-   <form action="/update?id=<%=editData.id%>" method="post">
-        <input type="text" placeholder="Enter Your name" value="<%=editData.name%>" name="name" required>
-        <input type="Course" placeholder="Enter Course" value="<%=editData.course%>" name="course" required>
+   <form action="/update?id=<%=editData.id%>" method="post" enctype="multipart/form-data">
+        <input type="text" placeholder="Enter Your name" value="<%=editData.name%>" name="name">
+        <input type="Course" placeholder="Enter Course" value="<%=editData.course%>" name="course">
+        <input type="file" name="image">
+        <img src="<%=editData.image%>" width="40%" alt="">
         <input type="submit" value="submit">
    </form>
 </body>
