--- a/Admin Pannel/views/EditForm.ejs
+++ b/Admin Pannel/views/EditForm.ejs
@@ -149,7 +149,7 @@
                       <label
                         for="fname"
                         class="col-sm-3 text-end control-label col-form-label"
-                        >Fullname</label
+                        >FirstName</label
                       >
                       <div class="col-sm-9">
                         <input
@@ -157,8 +157,25 @@
                           class="form-control"
                           id="fname"
                           name="fname"
-                          placeholder="Full Name Here"
+                          placeholder="FirstName"
                           value="<%=editdata.fname%>"
+                        />
+                      </div>
+                    </div>
+                    <div class="form-group row"></div>
+                      <label
+                        for="fname"
+                        class="col-sm-3 text-end control-label col-form-label"
+                        >LastName</label
+                      >
+                      <div class="col-sm-9">
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="lname"
+                          name="lname"
+                          placeholder="LastName"
+                          value="<%=editdata.lname%>"
                         />
                       </div>
                     </div>
