--- a/Admin Pannel/views/AddForm.ejs
+++ b/Admin Pannel/views/AddForm.ejs
@@ -132,18 +132,33 @@
                       <label
                         for="fname"
                         class="col-sm-3 text-end control-label col-form-label"
-                        >Fullname</label
-                      >
+                        >FirstName</label>
                       <div class="col-sm-9">
                         <input
                           type="text"
                           class="form-control"
                           id="fname"
                           name="fname"
-                          placeholder="Full Name Here"
+                          placeholder="FirstName"
                         />
                       </div>
                     </div>
+                    <div class="form-group row">
+                      <label
+                        for="fname"
+                        class="col-sm-3 text-end control-label col-form-label"
+                        >LastName</label>
+                      <div class="col-sm-9">
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="lname"
+                          name="lname"
+                          placeholder="LastName"x
+                        />
+                      </div>
+                    </div>1
+                      
                     <div class="form-group row">
                       <label
                         for="lname"
@@ -154,7 +169,7 @@
                         <input
                           type="email"
                           class="form-control"
-                          id="lname"
+                          id="email"
                           name="email"
                           placeholder="Email Address Here"
                         />
@@ -170,7 +185,7 @@
                         <input
                           type="password"
                           class="form-control"
-                          id="lname"
+                          id="pwd"
                           name="password"
                           placeholder="Password Here"
                         />
@@ -194,7 +209,7 @@
                         <input
                           type="file"
                           class="form-control"
-                          id="lname"
+                          id="img"
                           name="img"
                         />
                     </div>
